Update project to latest